crates/store/re_data_loader/src/loader_mcap/tests/foxglove/snapshots/re_data_loader__loader_mcap__tests__foxglove__test_frame_transforms__foxglove_frame_transforms.snap
---
source: crates/store/re_data_loader/src/loader_mcap/tests/foxglove/test_frame_transforms.rs
expression: "format!(\"{:-240}\", chunk)"
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                         │
│ * entity_path: /frame_transforms                                                                                                                                                                                                  │
│ * id: [**REDACTED**]                                                                                                                                                                                                              │
│ * version: [**REDACTED**]                                                                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┐ │
│ │ RowId                     ┆ message_log_time          ┆ message_publish_time      ┆ timestamp                 ┆ Transform3D:child_frame   ┆ Transform3D:parent_frame  ┆ Transform3D:quaternion    ┆ Transform3D:translation   │ │
│ │ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       │ │
│ │ type: non-null            ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: List(Utf8)          ┆ type: List(Utf8)          ┆ type:                     ┆ type:                     │ │
│ │ FixedSizeBinary(16)       ┆ index_name:               ┆ index_name:               ┆ index_name: timestamp     ┆ archetype: Transform3D    ┆ archetype: Transform3D    ┆ List(FixedSizeList(4 x    ┆ List(FixedSizeList(3 x    │ │
│ │ ARROW:extension:metadata: ┆ message_log_time          ┆ message_publish_time      ┆ is_sorted: true           ┆ component:                ┆ component:                ┆ non-null Float32))        ┆ non-null Float32))        │ │
│ │ {"namespace":"row"}       ┆ is_sorted: true           ┆ is_sorted: true           ┆ kind: index               ┆ Transform3D:child_frame   ┆ Transform3D:parent_frame  ┆ archetype: Transform3D    ┆ archetype: Transform3D    │ │
│ │ ARROW:extension:name:     ┆ kind: index               ┆ kind: index               ┆                           ┆ component_type:           ┆ component_type:           ┆ component:                ┆ component:                │ │
│ │ TUID                      ┆                           ┆                           ┆                           ┆ TransformFrameId          ┆ TransformFrameId          ┆ Transform3D:quaternion    ┆ Transform3D:translation   │ │
│ │ is_sorted: true           ┆                           ┆                           ┆                           ┆ kind: data                ┆ kind: data                ┆ component_type:           ┆ component_type:           │ │
│ │ kind: control             ┆                           ┆                           ┆                           ┆                           ┆                           ┆ RotationQuat              ┆ Translation3D             │ │
│ │                           ┆                           ┆                           ┆                           ┆                           ┆                           ┆ kind: data                ┆ kind: data                │ │
│ ╞═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╡ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.0, 1.0]]    ┆ [[1.0, 0.0, 0.0]]         │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.82327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.309017,     ┆ [[0.809017, 0.58778524,   │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 4752                      ┆                           ┆                           ┆ 0.95105654]]              ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.92327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.58778524,   ┆ [[0.309017, 0.95105654,   │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ 0.809017]]                ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.02327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.809017,     ┆ [[-0.309017, 0.95105654,  │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ 0.58778524]]              ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.12327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.95105654,   ┆ [[-0.809017, 0.58778524,  │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ 0.309017]]                ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.22327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 1.0,          ┆ [[-1.0, 1.2246469e-16,    │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ 6.123234e-17]]            ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.32327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.95105654,   ┆ [[-0.809017, -0.58778524, │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 4752                      ┆                           ┆                           ┆ -0.309017]]               ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.42327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.809017,     ┆ [[-0.309017, -0.95105654, │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ -0.58778524]]             ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.52327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.58778524,   ┆ [[0.309017, -0.95105654,  │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ -0.809017]]               ┆ 0.0]]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:33.72327 ┆ 2026-02-10T09:27:34.62327 ┆ [sensor]                  ┆ [world]                   ┆ [[0.0, 0.0, 0.309017,     ┆ [[0.809017, -0.58778524,  │ │
│ │                           ┆ 5008                      ┆ 5008                      ┆ 5008                      ┆                           ┆                           ┆ -0.95105654]]             ┆ 0.0]]                     │ │
│ └───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
